fix spacing for description text

--- a/styles/description.css
+++ b/styles/description.css
@@ -33,6 +33,7 @@
 .marvel {
   margin-top: 0;
   font-size: 60px;
+  word-spacing: -4px;
 }
 
 .marvel-text {
@@ -50,7 +51,7 @@
   border-top: 2px solid white;
   line-height: 52px;
   letter-spacing: -5px;
-  font-size: 60px;
+  font-size: 58px;
 }
 
 .ten-years {
@@ -59,7 +60,7 @@
 
 .anniversary {
   font-size: 30px;
-  letter-spacing: 14px;
+  letter-spacing: 13.5px;
   font-weight: 500;
 }
 
@@ -77,7 +78,7 @@
   margin-top: -10px;
   font-size: 45px;
   font-weight: 500;
-  letter-spacing: 14px;
+  letter-spacing: 12.5px;
 }
 
 .date-time {
@@ -102,6 +103,6 @@
 
 .address {
   font-size: 23px;
-  letter-spacing: 8.5px;
+  letter-spacing: 8px;
   font-weight: 700;
 }
